--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.11",
     "@studio-freight/lenis": "^1.0.27",
+    "cors": "^2.8.5",
     "framer-motion": "^10.16.4",
+    "nodemailer": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
